apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: linkding
        image: sissbruecker/linkding:1.42.0
        ports:
        - containerPort: 9090
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          privileged: false 
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - mountPath: /etc/linkding/data
          name: linkding-storage
      volumes:
        - name: linkding-storage
          persistentVolumeClaim:
            claimName: linkding-data
