apps/linkding/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: apps
spec:
  selector:
    app: likding
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
